# apex-store-intelligence

./: .gitignore  CHOICES.md  DESIGN.md  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  ingest_video.py  nginx.conf  populate_sample.py  prometheus.yml  pyproject.toml  render.yaml  requirements.txt  sample_events.jsonl
apex/: __init__.py  config.py  session_builder.py  video_processor.py
apex/analytics/: __init__.py  anomaly.py  conversion.py  heatmap.py  metrics.py
apex/api/: main.py  schemas.py
apex/api/routers/: events.py  health.py  process.py  stores.py
apex/models/: __init__.py  database.py  events.py  sessions.py  transactions.py  visitors.py
apex/pipeline/: __init__.py  detector.py  embeddings.py  identity_engine.py  staff_classifier.py  topology.py  tracker.py
configs/: camera_config.json  store_topology.json
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AnomalyBadge.tsx  ConfidenceBadge.tsx  FunnelChart.tsx  Header.tsx  KPICard.tsx  LiveTicker.tsx  MetricWithReason.tsx  Sidebar.tsx  ZoneHeatmap.tsx
dashboard/src/lib/: api.ts  mock-data.ts  utils.ts
dashboard/src/pages/: AnomaliesPage.tsx  FunnelPage.tsx  HealthPage.tsx  HeatmapPage.tsx  IdentityPage.tsx  JourneysPage.tsx  OverviewPage.tsx  VisitorsPage.tsx
tests/: conftest.py  test_analytics.py  test_anomaly.py  test_api.py  test_conversion.py  test_identity_engine.py  test_session_builder.py
